# vk_launcher

./: LICENSE  README.md
01_vulkanTriangle/app/: CMakeLists.txt  build.gradle
01_vulkanTriangle/app/src/main/: AndroidManifest.xml
01_vulkanTriangle/app/src/main/java/com/example/vulkantriangle/: MainActivity.java
01_vulkanTriangle/app/src/main/jni/: AndroidMain.cpp  VulkanMain.cpp  arithmetic.h  common.h  constants.h  context.h  data_type_utils.h  kernel_utils.cpp  kernel_utils.h  mem_request.h  memory_pool.cpp  memory_pool.h  runtime.h  type.cpp  type.h  type_factory.cpp  type_factory.h  type_utils.cpp  type_utils.h  unified_allocator.cpp  unified_allocator.h  virtual_memory.h  vulkan_api.cpp  vulkan_api.h  vulkan_common.h  vulkan_simple_memory_pool.cpp  vulkan_simple_memory_pool.h  vulkan_utils.cpp  vulkan_utils.h
01_vulkanTriangle/app/src/main/res/layout/: activity_main.xml
01_vulkanTriangle/app/src/main/resources/: init_c6_0_k0004_vk_t00.spv  init_c6_0_k0004_vk_t01.spv  output.spv  substep_c4_0_k0006_vk_t00.spv  substep_c4_0_k0006_vk_t01.spv  substep_c4_0_k0006_vk_t02.spv
01_vulkanTriangle/app/src/main/shaders/: init_c6_0_k0004_vk_t00.spv  init_c6_0_k0004_vk_t01.spv  substep_c4_0_k0006_vk_t00.spv  substep_c4_0_k0006_vk_t01.spv  substep_c4_0_k0006_vk_t02.spv  substep_c4_0_k0006_vk_t03.spv
01_vulkanTriangle/gradle/wrapper/: gradle-wrapper.properties
common/renderer/: VulkanRenderer.cpp
dumped_data/: mpm88_metadata.txt  mpm88_substep_c4_0_k0016_vk_t00.spv  mpm88_substep_c4_0_k0016_vk_t01.spv  mpm88_substep_c4_0_k0016_vk_t02.spv  mpm88_substep_c4_0_k0016_vk_t03.spv  simple_metadata.tcb  simple_metadata.txt  simple_run_c4_0_k0008_vk_t00.spv
